[gd_scene load_steps=28 format=3 uid="uid://bbr60oq3xovsq"]

[ext_resource type="Script" path="res://scenes/entities/character/base_character.gd" id="1_55h47"]
[ext_resource type="Texture2D" uid="uid://cnsosgognq3hm" path="res://assets/graphics/entities/characters/1.png" id="2_21w0g"]
[ext_resource type="Texture2D" uid="uid://ba0ts4e7mqcp4" path="res://assets/graphics/system/emotes.png" id="3_ntxu5"]

[sub_resource type="Animation" id="Animation_iexlm"]
resource_name = "angry"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_x1tnm"]
resource_name = "attention"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_ruuad"]
resource_name = "confused"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_3ypt5"]
resource_name = "idea"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_mpkpr"]
resource_name = "love"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_1n3sc"]
resource_name = "music"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_d3qq2"]
resource_name = "question"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_knmw1"]
resource_name = "shame"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_0uuk8"]
resource_name = "sleeping"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_7u4l1"]
resource_name = "stop"
step = 0.1

[sub_resource type="Animation" id="Animation_16ube"]
resource_name = "talking"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EmoteSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qw0yi"]
_data = {
"angry": SubResource("Animation_iexlm"),
"attention": SubResource("Animation_x1tnm"),
"confused": SubResource("Animation_ruuad"),
"idea": SubResource("Animation_3ypt5"),
"love": SubResource("Animation_mpkpr"),
"music": SubResource("Animation_1n3sc"),
"question": SubResource("Animation_d3qq2"),
"shame": SubResource("Animation_knmw1"),
"sleeping": SubResource("Animation_0uuk8"),
"stop": SubResource("Animation_7u4l1"),
"talking": SubResource("Animation_16ube")
}

[sub_resource type="LabelSettings" id="LabelSettings_ulvd3"]
font_size = 20
outline_size = 8
outline_color = Color(0.154325, 0.189169, 0.2145, 1)
shadow_size = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ncs7u"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_8bcq2"]
resource_name = "idle_down"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 1, 1, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -18)]
}

[sub_resource type="Animation" id="Animation_kloc5"]
resource_name = "idle_left"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 4, 4, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -18)]
}

[sub_resource type="Animation" id="Animation_12x8h"]
resource_name = "idle_right"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [7, 7, 7, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -18)]
}

[sub_resource type="Animation" id="Animation_uebkc"]
resource_name = "idle_up"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 10, 10, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -18)]
}

[sub_resource type="Animation" id="Animation_2sxxa"]
resource_name = "walking_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -18)]
}

[sub_resource type="Animation" id="Animation_iotuh"]
resource_name = "walking_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -18)]
}

[sub_resource type="Animation" id="Animation_64uxp"]
resource_name = "walking_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.5, -18)]
}

[sub_resource type="Animation" id="Animation_wghgp"]
resource_name = "walking_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, -18)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcvof"]
_data = {
"idle_down": SubResource("Animation_8bcq2"),
"idle_left": SubResource("Animation_kloc5"),
"idle_right": SubResource("Animation_12x8h"),
"idle_up": SubResource("Animation_uebkc"),
"walking_down": SubResource("Animation_2sxxa"),
"walking_left": SubResource("Animation_iotuh"),
"walking_right": SubResource("Animation_64uxp"),
"walking_up": SubResource("Animation_wghgp")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_m54vj"]
radius = 22.0227

[node name="BaseChar" type="CharacterBody2D" node_paths=PackedStringArray("_name", "_camera", "_raycast", "_texture", "_animation", "target_area", "_emote_sprite", "_emote_animation")]
y_sort_enabled = true
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_55h47")
_name = NodePath("Name")
_camera = NodePath("Camera")
_raycast = NodePath("Raycast")
_texture = NodePath("Texture")
_animation = NodePath("Animation")
target_area = NodePath("TargetArea")
_emote_sprite = NodePath("EmoteSprite")
_emote_animation = NodePath("EmoteAnimation")

[node name="EmoteSprite" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(16, -52)
texture = ExtResource("3_ntxu5")
hframes = 8
vframes = 10
frame = 32

[node name="EmoteAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qw0yi")
}

[node name="Name" type="Label" parent="."]
z_index = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -56.0
offset_right = 58.0
offset_bottom = -17.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
text = "Raizen"
label_settings = SubResource("LabelSettings_ulvd3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_ncs7u")

[node name="Raycast" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(0, 13)

[node name="Texture" type="Sprite2D" parent="."]
position = Vector2(-0.5, -18)
texture = ExtResource("2_21w0g")
hframes = 3
vframes = 4
frame = 1

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lcvof")
}

[node name="TargetArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="TargetArea"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_m54vj")

[connection signal="animation_finished" from="EmoteAnimation" to="." method="_on_emote_animation_animation_finished"]
[connection signal="animation_started" from="EmoteAnimation" to="." method="_on_emote_animation_animation_started"]
[connection signal="input_event" from="TargetArea" to="." method="_on_target_area_input_event"]
